Fix for bug 246505: simple html displays the ; from entities Patch by benb r=akkzilla sr=jst